Fixed minor misalignment when nonav is enabled, changed main-game from class to ID

--- a/css/game.css
+++ b/css/game.css
@@ -1,8 +1,9 @@
-.main-game {
+#main-game {
     display: flex;
     align-items: center;
     justify-content: end;
     grid-column: 1 / 4;
+    grid-row: 1 / 2;
     flex-direction: column;
     height: calc(95vh - 50px);
     padding-bottom: calc(5vh + 50px);
